# Blitzen

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
Assets/Materials/: testMat.blmt
Assets/Scenes/CityLow/: license.txt  scene.gltf
Assets/Scenes/CityLow/textures/: rails_baseColor.dds  vehicles_baseColor.dds  vehicles_emissive.dds
Assets/Scenes/Sponza/textures/: arch_stone_wall_01_baseColor.dds  arch_stone_wall_01_normal.dds  brickwall_01_baseColor.dds  brickwall_01_metallicRoughness.dds  brickwall_01_normal.dds  brickwall_02_baseColor.dds  brickwall_02_metallicRoughness.dds  brickwall_02_normal.dds  ceiling_plaster_02_baseColor.dds  ceiling_plaster_02_metallicRoughness.dds  ceiling_plaster_02_normal.dds  column_1stfloor_baseColor.dds  column_1stfloor_metallicRoughness.dds  column_1stfloor_normal.dds  column_brickwall_01_baseColor.dds  column_brickwall_01_metallicRoughness.dds  column_brickwall_01_normal.dds  column_head_1stfloor_baseColor.dds  column_head_1stfloor_metallicRoughness.dds  column_head_1stfloor_normal.dds  column_head_2ndfloor_02_baseColor.dds  (+47 more)
Assets/Textures/: BlitzenLSV1.dds
GlslShaders/: InitialDrawCullShader.comp.glsl  MainFragmentOutput.frag.glsl  MainVertexOutput.vert.glsl
HlslShaders/: cullBuffers.hlsl  drawCountReset.cs.hlsl  drawCull.cs.hlsl  hlslMath.hlsl  loadingTriangle.ps.hlsl  loadingTriangle.vs.hlsl  opaqueDraw.ps.hlsl  opaqueDraw.vs.hlsl  sharedBuffers.hlsl
HlslShaders/CS/: debugPyramid.cs.hlsl  depthPyramid.cs.hlsl  drawCountReset.cs.hlsl  drawCull.cs.hlsl  drawInstCmd.cs.hlsl  drawInstCountReset.cs.hlsl  drawInstCull.cs.hlsl  drawOccFirst.cs.hlsl  drawOccLate.cs.hlsl  drawOccTemporal.hlsl
HlslShaders/Headers/: cullBuffers.hlsl  hlslMath.hlsl  sharedBuffers.hlsl  vsBuffers.hlsl
HlslShaders/PS/: opaqueDraw.ps.hlsl
HlslShaders/VS/: opaqueDraw.vs.hlsl  opaqueDrawInst.vs.hlsl
HlslShadersLegacy/: loadingTriangle.vs.hlsl
VulkanShaderHeaders/: CullingShaderData.glsl  PlaceholderForReplacements.glsl  ShaderBuffers.glsl
VulkanShaders/: BasicBackground.comp.glsl  DepthReduce.comp.glsl  IndirectCulling.comp.glsl  InitialClusterCull.comp.glsl  InitialDrawCull.comp.glsl  InitialDrawCullDebug.comp.glsl  LateCulling.comp.glsl  LateDrawCull.comp.glsl  LateDrawCullDebug.comp.glsl  LoadingTriangle.vert.glsl  MainObjectShader.frag.glsl  MainObjectShader.vert.glsl  MeshShader.mesh.glsl  MeshShader.task.glsl  OnpcDrawCull.comp.glsl  OnpcGeometry.vert.glsl  PreClusterDrawCull.comp.glsl  PreClusterLateDrawCull.comp.glsl  ShaderBuffers.glsl.h  TransparentClusterCull.comp.glsl  TransparentDrawCull.comp.glsl  tranparentDrawCull.comp.glsl
src/: mainEngine.cpp  mainEngine.h
src/Application/: resourceLoading.cpp  resourceLoading.h  textures.h
src/BlitCL/: DynamicArray.h  blitArray.h  blitArrayIterator.h  blitHashMap.h  blitPfn.h  blitSmartPointer.h  blitString.h  blitzenContainerLibrary.h
src/BlitzenDX12/: dx12Commands.cpp  dx12Commands.h  dx12Data.h  dx12Draw.cpp  dx12Init.cpp  dx12Pipelines.cpp  dx12Pipelines.h  dx12RNDResources.cpp  dx12RNDResources.h  dx12Renderer.h  dx12RendererSetup.cpp  dx12Resources.cpp  dx12Resources.h
src/BlitzenGl/: openglData.h  openglInit.cpp  openglRenderer.cpp  openglRenderer.h
src/BlitzenMathLibrary/: blitML.h  blitMLTypes.h
src/BlitzenVulkan/: vulkanApiInitFunctions.h  vulkanCommands.cpp  vulkanData.h  vulkanDraw.cpp  vulkanGpuUpload.cpp  vulkanHandles.cpp  vulkanInit.cpp  vulkanPipelines.cpp  vulkanPipelines.h  vulkanRaytracing.cpp  vulkanRenderer.cpp  vulkanRenderer.h  vulkanRendererSetup.cpp  vulkanResourceFunctions.h  vulkanResources.cpp
src/Core/: blitAssert.h  blitEntityManager.h  blitEvents.h  blitInput.h  blitKeys.h  blitLogger.h  blitMemory.h  blitTimeManager.h  blitzenContainerLibrary.cpp  blitzenContainerLibrary.h  blitzenCore.h  blitzenEngine.h  blitzenEntityManager.cpp  blitzenEntry.cpp  blitzenEvents.cpp  blitzenLogger.cpp  blitzenMemory.cpp  blitzenTimeManager.cpp  blitzenWorld.h  blitzenWorldPrivate.h
src/Core/BlitzenWorld/: blitzenWorld.h  blitzenWorldPrivate.h
src/Core/DbLog/: blitAssert.h  blitLogger.cpp  blitLogger.h
src/Core/Entities/: blitEntityManager.h  blitzenEntityManager.cpp
src/Core/Events/: blitEvents.h  blitKeys.h  blitTimeManager.h  blitzenEvents.cpp  blitzenTimeManager.cpp
src/Engine/: blitzenDefaultEvents.cpp  blitzenEngine.cpp  blitzenEngine.h  blitzenWorld.h
src/Game/: blitCamera.h  blitObject.h  blitzenCamera.cpp  blitzenObject.cpp
src/Platform/: blitPlatform.h  blitPlatformContext.h  blitzenLinux.cpp  blitzenWindows.cpp  filesystem.cpp  filesystem.h  platform.cpp  platform.h
src/Platform/BlitzenWindows/: blitMappedFile.cpp
src/Platform/Common/: blitMappedFile.h
src/Platform/Filesystem/: blitCFILE.cpp  blitCFILE.h
src/Renderer/: blitDDSTextures.h  blitRenderer.h  blitRenderingResources.h  blitzenDDSTextures.cpp  blitzenRenderer.cpp  blitzenRenderingResources.cpp  renderingResourcesTypes.h
src/Renderer/BlitzenDX12/: dx12Commands.h  dx12Data.h  dx12Draw.cpp  dx12Init.cpp  dx12Pipelines.cpp  dx12RNDResources.cpp  dx12RNDResources.h  dx12Renderer.h  dx12RendererSetup.cpp  dx12Resources.h
src/Renderer/BlitzenGl/: openglData.h  openglRenderer.cpp  openglRenderer.h  openglResources.cpp
src/Renderer/BlitzenVulkan/: vulkanCommands.h  vulkanData.h  vulkanDraw.cpp  vulkanHandles.cpp  vulkanInit.cpp  vulkanPipelines.cpp  vulkanRaytracing.cpp  vulkanRenderer.h  vulkanRendererSetup.cpp  vulkanResourceFunctions.h  vulkanResources.cpp
src/Renderer/GlslShaders/: InitialDrawCullShader.comp.glsl  MainFragmentOutput.frag.glsl  MainVertexOutput.vert.glsl
src/Renderer/HlslShadersLegacy/: loadingTriangle.ps.hlsl
src/Renderer/Interface/: blitRenderer.h  blitRendererInterface.h  blitzenRenderer.cpp
src/Renderer/Resources/: blitRenderingResources.h  blitzenRenderingResources.cpp  renderingResourcesTypes.h
src/Renderer/VulkanShaders/: GeneratePresentation.comp.glsl  LoadingTriangle.frag.glsl  MainObjectShader.frag.glsl  MeshShader.task.glsl  OnpcDrawCull.comp.glsl  OnpcGeometry.vert.glsl  TransparentDrawCull.comp.glsl
(+17 files in other folders)
